--- a/index.html
+++ b/index.html
@@ -4,34 +4,30 @@
 <head>
   <meta charset="utf-8">
   <title>janabrao</title>
-  <style media="screen">
-    body {
-      background-color: #d5fdff;
-    }
-
-    hr {
-      border-style: none;
-      border-top-style: dotted;
-      border-color: grey;
-      border-width: 5px;
-      width:7.5%;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <img src="images/Photo.jpeg" alt="rare pic (professional)" width="100" height="100">
-  <h1>Jnana Bhaskar Rao</h1>
-  <p>Ph.D at <em>IIT Bombay</em>. Working on supersonic jets.</p>
-  <p>Football always on my mind. Always eager to learn new things.</p>
-  <hr "size=2">
+  <table>
+    <tr>
+      <td><img style="border-radius:33%;" src="images/Photo.jpeg" alt="rare pic (professional)" width="100" height="100"></td>
+      <td>
+        <h1>Jnana Bhaskar Rao</h1>
+          <p>Ph.D at <em>IIT Bombay</em>. Working on supersonic jets.</p>
+          <p>Football always on my mind. Always eager to learn new things.</p>
+      </td>
+    </tr>
+
+  </table>
+
+  <hr>
   <h3>My Current Work</h3>
   <ul>
     <li>Noise generation in supersonic jets</li>
     <li>Openfoam expertise</li>
     <li>Coding CFD to your needs </li>
   </ul>
-  <hr "size=4">
+  <hr>
   <table>
     <thead>
       <th>Time</th>
@@ -41,12 +37,12 @@
     <tr>
       <td>2010-2014</td>
       <td>Captaincy and teams</td>
-      <td>6trophies</td>
+      <td>6 trophies</td>
     </tr>
     <tr>
       <td>2014-2018</td>
       <td>Captaincy and teams</td>
-      <td>3trophies</td>
+      <td>3 trophies</td>
     </tr>
   </table>
   <hr "size=4">
