--- a/MySite/index.html
+++ b/MySite/index.html
@@ -18,9 +18,9 @@
     </div>
     <div class="mid_container">
       <div class="profile">
-        <img src="" alt="">
-        <h2>Hello.</h2>
-        <p>I'm Jnana Bhaskar Rao (JB). I am a CFD expert who loves to perform simulations on fluids with a whole range of opensource software</p>
+        <img class="my_pic" src="Pic_standard.jpg" alt="Here was a nice pic of me if you wanted to know">
+        <h2>Hello!</h2>
+        <p>I'm Jnana Bhaskar Rao (JB). I am a CFD expert who loves to perform simulations on fluids with a whole range of opensource software.</p>
       </div>
       <hr>
       <div class="skills">
@@ -59,7 +59,7 @@
         <a class="footer-link" href="https://jnanabrao/github.com.co/">Website</a>
       </div>
 
-      <p class="copyright">© 2018 Jnana Rao.</p>
+      <p class="copyright">© 2020 Jnana Rao.</p>
     </div>
 
   </body>
